--- a/index.html
+++ b/index.html
@@ -15123,9 +15123,7 @@ iron-selector:not(.narrow-layout) #main ::content [paper-drawer-toggle] {
   </style>
 
   <template>
-    <pre><code>
-        <content></content>
-    </code></pre>
+    <content></content>
   </template>
 
   <script>
@@ -15138,15 +15136,22 @@ iron-selector:not(.narrow-layout) #main ::content [paper-drawer-toggle] {
         }
       },
 
-      attached: function() {
-        var code = this.querySelector('code');
-        code.normalize();
-        code.firstChild.data = code.firstChild.data.trim();
+      ready: function() {
+        this.normalize();
 
-        var pre = this.querySelector('pre');
+        // Need to manually create the pre and code elements as the polyfills
+        // do not correctly distribute Text nodes into content.
+        var code = document.createElement('code');
+        var pre = document.createElement('pre');
+
         pre.className = 'lang-' + this.getAttribute('lang');
+        pre.appendChild(code);
+        code.textContent = this.textContent.trim();
 
         Prism.highlightElement(code);
+
+        this.textContent = '';
+        this.appendChild(pre);
       }
     });
   </script>
