Fixing demo links not working on gh-pages
Dropping abspath from vulcanize as it always changes the demo links to an absolute path, which doesn't work on github
Changing all imports to use relative paths
Chagning demo links to relative paths
Removing README as gulp-vulcanize works when not using abspath
Moving original index from src as relative paths are not maintained correctly by vulcanize

--- a/content/app-content/app-content.html
+++ b/content/app-content/app-content.html
@@ -1,5 +1,5 @@
-<link href="/components/code-prism/code-prism.html" rel="import">
-<link href="/components/heading-with-link/heading-with-link.html" rel="import">
+<link href="../../components/code-prism/code-prism.html" rel="import">
+<link href="../../components/heading-with-link/heading-with-link.html" rel="import">
 
 <dom-module id="app-content">
   <style>
@@ -405,7 +405,7 @@ patch(myElement, render);
           The section on <a href="#conditional-rendering/array-of-items">arrays of items</a> mentions why using a key is important when iterating over an item. This demo shows how using a key prevents DOM nodes corresponding to separate items from being seen as a diff. In this case, a newly added item at the head of an array causes a new element by be created rather than all the items being updated.
         </p>
         <p>
-          <a href="/demo/keys.html">Demo</a>
+          <a href="../../demo/keys.html">Demo</a>
         </p>    
       </section>
 
@@ -415,7 +415,7 @@ patch(myElement, render);
           Incremental DOM itself only renders Elements and Text nodes, but you may want to use components when building an application. One way this chould be solved is by using the emerging <a href="http://w3c.github.io/webcomponents/spec/custom/">web components</a> standards. The following demo shows one way you could create components.
         </p>
         <p>
-          <a href="/demo/customelement.html">Demo</a>
+          <a href="../../demo/customelement.html">Demo</a>
         </p>
       </section>
     </article>
