--- a/content/app-main/app-main.html
+++ b/content/app-main/app-main.html
@@ -1,13 +1,13 @@
-<link href="/bower_components/iron-icons/iron-icons.html" rel="import">
-<link href="/bower_components/paper-drawer-panel/paper-drawer-panel.html" rel="import">
-<link href="/bower_components/paper-header-panel/paper-header-panel.html" rel="import">
-<link href="/bower_components/paper-icon-button/paper-icon-button.html" rel="import">
-<link href="/bower_components/paper-styles/paper-styles.html" rel="import">
-<link href="/bower_components/paper-toolbar/paper-toolbar.html" rel="import">
+<link href="../../bower_components/iron-icons/iron-icons.html" rel="import">
+<link href="../../bower_components/paper-drawer-panel/paper-drawer-panel.html" rel="import">
+<link href="../../bower_components/paper-header-panel/paper-header-panel.html" rel="import">
+<link href="../../bower_components/paper-icon-button/paper-icon-button.html" rel="import">
+<link href="../../bower_components/paper-styles/paper-styles.html" rel="import">
+<link href="../../bower_components/paper-toolbar/paper-toolbar.html" rel="import">
 
-<link href="/components/hash-menu/hash-menu.html" rel="import">
+<link href="../../components/hash-menu/hash-menu.html" rel="import">
 
-<link href="/content/app-content/app-content.html" rel="import">
+<link href="../../content/app-content/app-content.html" rel="import">
 
 <dom-module id="app-main">
   <style>
