--- a/demo/customelement.html
+++ b/demo/customelement.html
@@ -17,6 +17,6 @@
       <a href="https://github.com/google/incremental-dom/blob/master/demo/customelement.html">Demo source</a>
     </div>
 
-    <iframe src="/node_modules/incremental-dom/demo/customelement.html"></iframe>
+    <iframe src="../node_modules/incremental-dom/demo/customelement.html"></iframe>
   </body>
 </html>
