Fix sentence and add link to installations instructions.

--- a/content/app-content/app-content.html
+++ b/content/app-content/app-content.html
@@ -59,10 +59,21 @@
           Incremental DOM is a library for expressing and applying updates to DOM trees. JavaScript can be used to extract, iterate over and transform data into calls generating <code>HTMLElement</code>s and <code>Text</code> nodes. It differs from Virtual DOM approaches in that a diff operation is performed <em>incrementally</em> (that is one node at a time) against the DOM, rather than on a virtual DOM tree.
         </p>
         <p>
-          Rather than directly targeting direct usage, Incremental DOM aims to provide a platform for a higher level library or framework to target. As you might notice from the examples, Incremental DOM-style markup can be somewhat challenging to write and read. See <a href="#why-incremental-dom">Why Incremental DOM</a> for an explanation.
+          Rather than targeting direct usage, Incremental DOM aims to provide a platform for higher level libraries or frameworks. As you might notice from the examples, Incremental DOM-style markup can be somewhat challenging to write and read. See <a href="#why-incremental-dom">Why Incremental DOM</a> for an explanation.
         </p>
         <p>
           
+        </p>
+      </section>
+    </article>
+
+    <article>
+      <h2 is="h2-with-link" id="about">Installation</h2>
+      <section>
+        <p>
+          See <a href="http://google.github.io/incremental-dom/">our Github</a>.
+        </p>
+        <p>
         </p>
       </section>
     </article>
