Added title to page and added link to medium post.

--- a/content/app-content/app-content.html
+++ b/content/app-content/app-content.html
@@ -448,6 +448,7 @@ patch(myElement, render);
         <p>
           Incremental DOM is a small (2.6kB min+gzip), standalone and unopinionated library. It renders DOM nodes and allows setting attributes/properties, but leaves the rest, including how to organize views, up to you. For example, an existing Backbone application could use Incremental DOM for rendering and updating DOM in place of a traditional template and manual update approach.
         </p>
+        <p>For more info <a href="https://medium.com/p/e98f79ce2c5f">read on here.</a></p>
       </section>
     </article>
   </template>
