--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta charset="UTF-8"><!--
+<!DOCTYPE ><html><head><meta charset="UTF-8"><!--
 @license
 Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
 This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE
@@ -12599,7 +12599,8 @@ pre[class*="language-"] {
     });
   })();
 </script>
-</head>
+<title>Incremental DOM documentation</title>
+  </head>
   <body><div hidden="" by-vulcanize=""><dom-module id="iron-icon" assetpath="bower_components/iron-icon/">
 
   <style>
@@ -15700,6 +15701,7 @@ patch(myElement, render);
         <p>
           Incremental DOM is a small (2.6kB min+gzip), standalone and unopinionated library. It renders DOM nodes and allows setting attributes/properties, but leaves the rest, including how to organize views, up to you. For example, an existing Backbone application could use Incremental DOM for rendering and updating DOM in place of a traditional template and manual update approach.
         </p>
+        <p>For more info <a href="https://medium.com/p/e98f79ce2c5f">read on here.</a></p>
       </section>
     </article>
   </template>
