--- a/index-raw.html
+++ b/index-raw.html
@@ -1,8 +1,10 @@
+<!doctype>
 <html>
   <head>
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="bower_components/polymer/polymer.html">
     <link rel="import" href="content/app-main/app-main.html">
+    <title>Incremental DOM documentation</title>
   </head>
   <body>
     <app-main></app-main>
