--- a/content/app-content/app-content.html
+++ b/content/app-content/app-content.html
@@ -305,7 +305,7 @@ elementOpen('div', item.key, ['staticAttr', 'staticValue'],
         <div>
           <h4>Description</h4>
           <p>
-            Signifies the end of the element opened with <code><a href="#api/elementOpen">elementOpen</a></code>, correspoding to a closing tag (e.g. <code>&lt;/div&gt;</code> in HTML). Any childNodes of the currently open Element that are in the DOM that have not been encountered in the current render pass are removed by the call to <code>elementClose</code>.
+            Signifies the end of the element opened with <code><a href="#api/elementOpen">elementOpen</a></code>, corresponding to a closing tag (e.g. <code>&lt;/div&gt;</code> in HTML). Any childNodes of the currently open Element that are in the DOM that have not been encountered in the current render pass are removed by the call to <code>elementClose</code>.
           </p>
 
           <h4>Parameters</h4>
