Fixed section id for installation.

--- a/content/app-content/app-content.html
+++ b/content/app-content/app-content.html
@@ -68,7 +68,7 @@
     </article>
 
     <article>
-      <h2 is="h2-with-link" id="about">Installation</h2>
+      <h2 is="h2-with-link" id="installation">Installation</h2>
       <section>
         <p>
           See <a href="http://google.github.io/incremental-dom/">our Github</a>.
