--- a/index-raw.html
+++ b/index-raw.html
@@ -1,6 +1,7 @@
 <!doctype>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="bower_components/polymer/polymer.html">
     <link rel="import" href="content/app-main/app-main.html">
