--- a/content/app-content/app-content.html
+++ b/content/app-content/app-content.html
@@ -67,6 +67,7 @@
       </section>
     </article>
 
+
     <article>
       <h2 is="h2-with-link" id="installation">Installation</h2>
       <section>
@@ -77,6 +78,7 @@
         </p>
       </section>
     </article>
+
    
     <article>
       <h2 is="h2-with-link" id="rendering-dom">Rendering DOM</h2>
@@ -105,6 +107,8 @@ function renderPart() {
 patch(document.getElementById('someId'), renderPart);
         </code-prism>
       </section>
+ 
+ 
       <section>
         <h3 is="h3-with-link" id="rendering-dom/attributes-and-properties">Attributes and Properties</h3>
         <p>
@@ -143,6 +147,7 @@ elementOpen('div', null, null,
 elementClose('div');
         </code-prism>
       </section>
+
 
       <section>
         <h3 is="h3-with-link" id="rendering-dom/statics-array">Statics Array</h3>
@@ -188,14 +193,15 @@ elementOpen('div', null, null,
 elementClose('div');
         </code-prism>
       </section>
-   </article>
+    </article>
+
 
     <article>
       <h2 is="h2-with-link" id="conditional-rendering">Conditional Rendering</h2>
       <section>
         <h3 is="h3-with-link" id="conditional-rendering/if-else">If/else</h3>
         <p>
-    As you can mix node declarations and JavaScript, rendering conditional branches is fairly straightforward. Simply place the node declarations inside a branch. This works with switch statements too!
+          As you can mix node declarations and JavaScript, rendering conditional branches is fairly straightforward. Simply place the node declarations inside a branch. This works with switch statements too!
         </p>
         <code-prism lang="javascript">
 function renderGreeting(date, name) {
@@ -211,10 +217,12 @@ function renderGreeting(date, name) {
 }
         </code-prism>
       </section>
+
+
       <section>
         <h3 is="h3-with-link" id="conditional-rendering/array-of-items">Array of Items</h3>
         <p>
-        You can use your favorite way to render an array (or any sort of iterable) of items. When rendering an array of items, you will want to specify a 'key' as the second argument to the <code><a href="#api/elementOpen">elementOpen</a></code> function. Incremental DOM uses the key in order to:
+          You can use your favorite way to render an array (or any sort of iterable) of items. When rendering an array of items, you will want to specify a 'key' as the second argument to the <code><a href="#api/elementOpen">elementOpen</a></code> function. Incremental DOM uses the key in order to:
         </p>
         <ol>
           <li>Prevent the treating of newly added or moved items as a diff that needs to be reconciled.</li>
@@ -233,7 +241,24 @@ elementOpen('ul');
 elementClose('ul');
         </code-prism>
       </section>
+
+
+      <section>
+        <h3 is="h3-with-link" id="conditional-rendering/logic-in-attributes">Logic in Attributes</h3>
+        <p>
+          Incremental DOM provides some helpers to give some additional control over how attribures are specified. The <code><a href="#api/elementOpenStart">elementOpenStart</a></code>, <code><a href="#api/attr">attr</a></code> and <code><a href="#api/elementOpenEnd">elementOpenEnd</a></code> functions act as a helper for calling <code><a href="#api/elementOpen">elementOpen</a></code>, allowing you to mix logic and attributes or call other functions.
+        </p>
+
+        <code-prism lang="javascript">
+elementOpenStart('div');
+  for (var key in obj) {
+    attr(key, obj[key]);
+  }
+elementOpenEnd('div');
+        </code-prism>
+      </section>
     </article>
+
 
     <article>
       <h2 is="h2-with-link" id="passing-functions">Passing Functions</h2>
@@ -300,6 +325,56 @@ elementOpen('div', item.key, ['staticAttr', 'staticValue'],
         </div>
       </section>
 
+
+      <section>
+        <h3 is="h3-with-link" id="api/elementOpenStart">elementOpenStart</h3>
+        <div>
+          <h4>Description</h4>
+          <p>
+            Used with <coode><a href="#api/attr">attr</a></code> and <code><a href="#api/elementOpenEnd">elementOpenEnd</a></code> to declare an element.
+          </p>
+
+          <h4>Parameters</h4>
+          <dl>
+            <dt><code><em>string</em> tagname</code></dt>
+            <dd>The name of the tag, e.g. 'div' or 'span'. This could also be the tag of a custom element.</dd>
+            <dt><code><em>string</em> key</code></dt>
+            <dd>The key that identifies Element for reuse. See <a href="#conditional-rendering/array-of-items">Arrays of Items</a></dd>
+            <dt><code><em>Array</em> staticPropertyValuePairs</code></dt>
+            <dd>Pairs of property names and values. Depending on the type of the value, these will be set as either attributes or properties on the Element. These are only set on the Element once during creation. These will not be updated during subsequent passes. See <a href="#rendering-dom/statics-array">Statics Array</a>.</dd>
+          </dl>
+        </div>
+      </section>
+      
+      
+      <section>
+        <h3 is="h3-with-link" id="api/attr">attr</h3>
+        <div>
+          <h4>Description</h4>
+          <p>
+            Used with <coode><a href="#api/elementOpenStart">elementOpenStart</a></code> and <code><a href="#api/elementOpenEnd">elementOpenEnd</a></code> to declare an element.
+          </p>
+
+          <h4>Parameters</h4>
+          <dl>
+            <dt><code><em>string</em> name</code></dt>
+            <dt><code><em>any</em> value</code></dt>
+          </dl>
+        </div>
+      </section>
+
+
+      <section>
+        <h3 is="h3-with-link" id="api/elementOpenEnd">elementOpenEnd</h3>
+        <div>
+          <h4>Description</h4>
+          <p>
+            Used with <coode><a href="#api/elementOpenStart">elementOpenStart</a></code> and <code><a href="#api/attr">attr</a></code> to declare an element.
+          </p>
+        </div>
+      </section>
+
+
       <section>
         <h3 is="h3-with-link" id="api/elementClose">elementClose</h3>
         <div>
@@ -322,6 +397,7 @@ elementClose('div');
           </code-prism>
         </div>
       </section>
+
 
       <section>
         <h3 is="h3-with-link" id="api/elementVoid">elementVoid</h3>
@@ -354,6 +430,7 @@ elementVoid('div', item.key, ['staticAttr', 'staticValue'],
         </div>
       </section>
 
+
       <section>
         <h3 is="h3-with-link" id="api/text">text</h3>
         <div>
@@ -376,6 +453,7 @@ text('hello world');
           </code-prism>
         </div>  
       </section>
+
 
       <section>
         <h3 is="h3-with-link" id="api/patch">patch</h3>
@@ -411,6 +489,7 @@ patch(myElement, render, someData);
       </section>
     </article>
 
+
     <article>
       <h2 is="h2-with-link" id="demos">Demos</h2>
       <section>
@@ -423,6 +502,7 @@ patch(myElement, render, someData);
         </p>    
       </section>
 
+
       <section>
         <h3 is="h3-with-link" id="demos/using-with-web-components">Using with Web Components</h3>
         <p>
@@ -433,6 +513,7 @@ patch(myElement, render, someData);
         </p>
       </section>
     </article>
+
 
     <article>
       <h2 is="h2-with-link" id="why-incremental-dom">Why Incremental DOM</h2>
